# console-card-rpg

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  Doxyfile  LICENSE  Makefile  README.adoc  README.md  prohlaseni.txt  zadani.txt
examples/card-definitions/: pirate-card-deck.txt  test_deck_01.txt  test_deck_02.txt  test_deck_03.txt  test_deck_04.txt  test_deck_05.txt  test_deck_06.txt  test_deck_07.txt  test_deck_08.txt  test_deck_09.txt  test_deck_10.txt  test_deck_11.txt  test_deck_12.txt  test_deck_13.txt  test_deck_14.txt  test_deck_15.txt
examples/saves/: gamePvP  gamePvR  gameRvR  test01  test02  test03  test04  test05  test06  test07  test08  test09  test10
src/: CApplication.cpp  CApplication.h  CCard.cpp  CCard.h  CEffect.cpp  CEffect.h  CEffectAttack.cpp  CEffectAttack.h  CEffectDefend.cpp  CEffectDefend.h  CEffectHeal.cpp  CEffectHeal.h  CEffectMana.cpp  CEffectMana.h  CGame.cpp  CGame.h  CIOHandler.cpp  CIOHandler.h  CInterface.cpp  CInterface.h  CPlayer.cpp  CPlayer.h  CPlayerHuman.cpp  CPlayerHuman.h  CPlayerRobot.cpp  CPlayerRobot.h  CStats.cpp  CStats.h  EEffectType.h  EGameType.h  main.cpp
